--- a/src/containers/Homepage/Homepage.css
+++ b/src/containers/Homepage/Homepage.css
@@ -1,5 +1,5 @@
 @font-face{
-    src: url(../../../fonts/texgyreadventor-regular.otf);
+    src: url(../../fonts/texgyreadventor-regular.otf);
     font-family:tr;
 }
 
